--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ colorama==0.4.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
-dbus-python==1.2.16
 distro==1.4.0
 entrypoints==0.3
 Flask==2.0.2
@@ -43,7 +42,6 @@ oauthlib==3.1.0
 pexpect==4.6.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-PyGObject==3.36.0
 PyHamcrest==1.9.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
@@ -51,6 +49,7 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyrsistent==0.15.5
 pyserial==3.4
+python-debian===0.1.44
 PyYAML==5.3.1
 requests==2.22.0
 requests-unixsocket==0.2.0
@@ -58,6 +57,7 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
+sos==0.23.4
 SQLAlchemy==1.4.26
 ssh-import-id==5.10
 systemd-python==234
@@ -67,4 +67,3 @@ wadllib==1.3.3
 Werkzeug==2.0.2
 WTForms==2.3.3
 zipp==3.6.0
-zope.interface==4.7.1
