--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,11 @@ blinker==1.4
 certifi==2019.11.28
 chardet==3.0.4
 click==8.0.3
-cloud-init==21.2
 colorama==0.4.3
-command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.8
-dbus-python==1.2.16
 distro==1.4.0
-distro-info===0.23ubuntu1
 entrypoints==0.3
 Flask==2.0.2
 Flask-Login==0.5.0
@@ -35,7 +31,6 @@ jsonpatch==1.22
 jsonpointer==2.0
 jsonschema==3.2.0
 keyring==18.0.1
-language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
@@ -47,7 +42,6 @@ oauthlib==3.1.0
 pexpect==4.6.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-PyGObject==3.36.0
 PyHamcrest==1.9.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
@@ -55,8 +49,7 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyrsistent==0.15.5
 pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.5
-python-debian===0.1.36ubuntu1
+python-debian===0.1.44
 PyYAML==5.3.1
 requests==2.22.0
 requests-unixsocket==0.2.0
@@ -64,16 +57,13 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
-sos==4.1
+sos==0.23.4
 SQLAlchemy==1.4.26
 ssh-import-id==5.10
 systemd-python==234
 Twisted==18.9.0
-ufw==0.36
-unattended-upgrades==0.1
 urllib3==1.25.8
 wadllib==1.3.3
 Werkzeug==2.0.2
 WTForms==2.3.3
 zipp==3.6.0
-zope.interface==4.7.1
