--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
+gunicorn==20.1.0
 httplib2==0.14.0
 hyperlink==19.0.0
 idna==2.8
