--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.7.4
 attrs==19.3.0
 Automat==0.8.0
 blinker==1.4
-certifi==2019.11.28
+certifi==2021.10.8
 chardet==3.0.4
 click==8.0.3
 colorama==0.4.3
@@ -26,7 +26,7 @@ importlib-metadata==1.5.0
 importlib-resources==5.3.0
 incremental==16.10.1
 itsdangerous==2.0.1
-Jinja2==3.0.2
+Jinja2==3.0.3
 jsonpatch==1.22
 jsonpointer==2.0
 jsonschema==3.2.0
@@ -37,8 +37,10 @@ lazr.uri==1.0.3
 Mako==1.1.5
 MarkupSafe==2.0.1
 more-itertools==4.2.0
-netifaces==0.10.4
+#netifaces==0.10.8
+numpy==1.21.2
 oauthlib==3.1.0
+pandas==1.3.5
 pexpect==4.6.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
@@ -49,14 +51,16 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyrsistent==0.15.5
 pyserial==3.4
+python-dateutil==2.8.2
 python-debian===0.1.44
+pytz==2021.3
 PyYAML==5.3.1
 requests==2.22.0
 requests-unixsocket==0.2.0
 SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
-six==1.14.0
+six==1.16.0
 sos==0.23.4
 SQLAlchemy==1.4.26
 ssh-import-id==5.10
